# openfast

./: .codecov.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  Amatrix.f90  ArcAll.txt  ArcFiles.txt  ArcFilesLin.txt  ArcFilesWin.txt  ArcMaint.txt  ArcWin.txt  Archive.bat  Archive_Win7.bat  AssembleRHS.f90  Beam model refinement and reduction .pdf.REMOVED.git-id  CITATION.cff  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  Chimatrix.f90  Compile_DISCON_DLL.bat  Compile_FAST.bat  CopyFilesForRelease.bat  DFORRT.DLL.REMOVED.git-id  DISCON.f90  DevelopLog.txt  Disclaimer.txt  Dmatrix.f90  FAST.pdf.REMOVED.git-id  FAST_Registry_Code_Roadmap.pptx  FAST_SourceFiles.txt  FAST_SourceFiles_ED.txt  FAST_SourceFiles_SrvD.txt  FAST_preamble.h  GlobalDataFun.f90  Glue.f90  HydroDynOutListParameters.xlsx  (+78 more)
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.rtd  DoxygenLayout.xml  Makefile  Plan - IceDyn.docx  conf.py  index.rst  requirements.txt
docs/OtherSupporting/: 3DRotations_Rev2.docx  ModulePlan_GasmiPaperExamples.doc  OpenFASTSteadyStateSolution_Rev7.doc  OutListParameters.xls  OutListParameters.xlsx  ProposedPCApproach_Rev4.docx  TightCoupling_Rev4.doc
docs/OtherSupporting/AeroDisk/: AeroDisk_Plan_Rev2.doc
docs/_extensions/: backports.py  figtable.py  html_mods.py  latex_mods.py  numfig.py
docs/_static/: .blank  references.bib
docs/_static/css/: math_eq.css
docs/changelogs/: 3.5.2.md  ReleaseProcess.md  template.md  v2.4.0.md  v2.5.0.md  v2.6.0.md  v3.0.0.md  v3.1.0.md  v3.2.0.md  v3.2.1.md  v3.3.0.md  v3.4.0.md  v3.4.1.md  v3.5.0.md  v3.5.1.md  v3.5.2.md  v3.5.3.md  v3.5.4.md  v3.5.5.md  v4.0.0.md  v4.0.1.md  v4.0.2.md  v4.0.3.md  v4.0.4.md  v4.0.5.md  v4.1.0.md  v4.1.1.md  v4.2.0.md  v4.2.1.md  v5.0.0.md
docs/source/: acknowledgements.rst  build_doc.rst  code.rst  fast_to_openfast.rst  get_started.rst  help.rst  index.rst  install.rst  install_linux.rst  install_mac.rst  license.rst  links.rst  overview.rst  test.rst  this_doc.rst  working.rst  zrefs.rst
glue-codes/fast-cpp/: CMakeLists.txt
glue-codes/fast-farm/: CMakeLists.txt
glue-codes/labview/: CMakeLists.txt
glue-codes/openfast/: CMakeLists.txt
glue-codes/openfast-cpp/: CMakeLists.txt
glue-codes/python/: OpenFAST.py  SeaState.py  WaveTankDriver.py  openfast_library.py  pyproject.toml  seastate.SeaSt.Elev  wavetankconfig.in
glue-codes/simulink/: CMakeLists.txt  README.md
modules-local/aeroacoustics/: CMakeLists.txt
modules-local/externalinflow/: CMakeLists.txt
modules-local/fast-cpp-library/: CMakeLists.txt
modules-local/fast-library/: CMakeLists.txt
modules-local/nwtc-library/: CMakeLists.txt
modules-local/openfoam/: CMakeLists.txt
modules-local/subdyn/: CMakeLists.txt
modules-local/supercontroller/: CMakeLists.txt
modules/aerodisk/: CMakeLists.txt
modules/aerodyn/: CMakeLists.txt  README.md
modules/aerodyn14/: CMakeLists.txt  README.md
modules/awae/: CMakeLists.txt
modules/beamdyn/: CMakeLists.txt  README.md
modules/dirtdyn/: CMakeLists.txt  README.md
modules/elastodyn/: CMakeLists.txt  README.md
openfast_io/: README.md  pyproject.toml
openfast_io/openfast_io/: FAST_linearization_reader.py  FAST_output_reader.py  FAST_post.py  FAST_reader.py  FAST_vars_out.py  FAST_writer.py  FileTools.py  __init__.py  _version.py  create_output_vars.py  turbsim_file.py  turbsim_util.py
openfast_python/: README.md  pyproject.toml
openfast_python/openfast/: CaseGen_General.py  FAST_reader.py  FAST_wrapper.py  FAST_writer.py  IEC_CoeherentGusts.py  LinearFAST.py  runFAST_pywrapper.py  turbsim_util.py
openfast_python/openfast_io/: FAST_output_reader.py  FAST_reader.py  FAST_vars_out.py  FAST_writer.py  FileTools.py  IEC_CoeherentGusts.py  StC_defaults.py  create_output_vars.py  turbsim_file.py  turbsim_util.py
python_toolbox/: pyproject.toml
reg_tests/: CMakeLists.txt  CTestList.cmake  README.md  compareTwoFASTruns.py  executeAerodiskRegressionCase.py  executeAerodynPyRegressionCase.py  executeAerodynRegressionCase.py  executeBeamdynRegressionCase.py  executeFASTFarmRegressionCase.py  executeFullRegressionTest.py  executeHydrodynPyRegressionCase.py  executeHydrodynRegressionCase.py  executeInflowwindPyRegressionCase.py  executeInflowwindRegressionCase.py  executeMoordynPyRegressionCase.py  executeMoordynRegressionCase.py  executeOpenfastAeroAcousticRegressionCase.py  executeOpenfastCase.py  executeOpenfastCppRegressionCase.py  executeOpenfastLinearRegressionCase.py  executeOpenfastRegressionCase.py  executeOpenfastcppRegressionCase.py  executePythonRegressionCase.py  executeRegressionTestCase.py  executeSeaStatePyRegressionCase.py  executeSeaStateRegressionCase.py  executeSimpleElastodynRegressionCase.py  executeSubdynRegressionCase.py  executeUnsteadyAeroRegressionCase.py  executeWavetankPyRegressionCase.py  fast_io.py  manualRegressionTest.py  pass_fail.py  pass_fail.sh  pitch.ipt  regressionTest.py
reg_tests/5MW_Baseline/: NRELOffshrBsline5MW_Monopile_IEC_Crushing.inp
reg_tests/AOC/: Test06_AD.ipt  Test06_AD15.ipt  Test07_AD.ipt  Test07_AD15.ipt  Test08_AD.ipt  Test08_AD15.ipt
reg_tests/AWT27/: Test01_AD.ipt  Test01_AD15.ipt  Test02_AD.ipt  Test02_AD15.ipt  Test03_AD.ipt  Test03_AD15.ipt  Test04_AD.ipt  Test04_AD15.ipt  Test05_AD.ipt  Test05_AD15.ipt
reg_tests/UAE_VI/: Test09_AD.ipt  Test09_AD15.ipt  Test10_AD.ipt  Test10_AD15.ipt
reg_tests/WP_Baseline/: Test14_AD.ipt  Test14_AD15.ipt
reg_tests/lib/: errorPlotting.py  eva.py  executeBeamdynCase.py  executeOpenfastCase.py  fast_io.py  fast_linearization_file.py  openfastDrivers.py  pass_fail.py  plotOpenfastOut.py  rtestlib.py  test_plot.py
unit_tests/: CMakeLists.txt  README.md  test_SUBROUTINE.F90
unit_tests/aerodyn/: CMakeLists.txt
unit_tests/beamdyn/: CMakeLists.txt
unit_tests/inflowwind/: CMakeLists.txt
unit_tests/lib/: filePrep.py
unit_tests/nwtc-library/: CMakeLists.txt
unit_tests/test-drive/: LICENSE-MIT  README.md  testdrive.F90  testdrive_version.f90
unit_tests/tests/: test_BD_CrvExtractCrv.F90
unit_tests/version/: CMakeLists.txt
(+3929 files in other folders)
