[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openfast_io"
# dynamic = ["version"]
version = "4.2.0"
description = "Readers and writers for OpenFAST files."
license = {file = "../LICENSE"}
authors = [
    {name = "Mayank Chetan", email = "mayank.chetan@nlr.gov"      },
    {name = "Andy Platt", email = "andy.platt@nlr.gov"            },
    {name = "Derek Slaughter", email = "derek.slaughter@nlr.gov"  },
    { name = "NLR WISDEM Team", email = "systems.engineering@nlr.gov"    },
]
maintainers = [
    {name = "Mayank Chetan", email = "mayank.chetan@nlr.gov"      },
    {name = "Andy Platt", email = "andy.platt@nlr.gov"            },
    {name = "Derek Slaughter", email = "derek.slaughter@nlr.gov"  },
]  
readme = "README.md"
requires-python = ">3.10"

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",

  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
]

dependencies = [
    "numpy>1.0",
    "pandas>2.0",
    "ruamel_yaml>0.18",
    "deepdiff>8.0",
    ]
    
[project.urls]
homepage = "https://github.com/OpenFAST/openfast"
documentation = "https://openfast.readthedocs.io/en/main/"
repository = "https://github.com/OpenFAST/openfast"
Issues = "https://github.com/OpenFAST/openfast/issues"



[project.optional-dependencies]

rosco = ["rosco>2.9.2"]
xlrd = ["xlrd>2.0"]
all = ["rosco>2.9.2", "xlrd>2.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "openfast_io/_version.py"
