[tool.poetry]
name = "openfast"
version = "3.5.4"
description = "Readers and writers for OpenFAST files."
authors = [
    {name = "NREL WISDEM Team", email = "systems.engineering@nrel.gov"},
    {name = "dzalkind"},
    {name = "Garrett Barter", email = "garrett.barter@nrel.gov"},
    {name = "Pietro Bortolotti", email = "<ptrbortolotti@gmail.com>"},
    {name = "Mayank Chetan"},
    {name = "John Jasa"},
    {name = "Marcus Lugg", email = "marcus@octue.com"},
]
readme = "README.md"
packages = [{include = "openfast"}]


[tool.poetry.dependencies]
python = "^3.9"
rosco = "^2.9"
numpy = "^1"
pandas = "^2"
xlrd = "^2"
ruamel_yaml = "^0.18"
pcrunch = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
